--- a/rocket_injector_design/rocket-injector-design-cpp.ipynb
+++ b/rocket_injector_design/rocket-injector-design-cpp.ipynb
@@ -2,7 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "/**\n",
     " * @file rocket-injector-design-cpp.ipynb\n",
@@ -14,24 +16,24 @@
     " * Also known as RE3-4-7, this problem has been taken from \"An Easy-to-use Real-world Multi-objective\n",
     " * Optimization Problem Suite\" paper. For more information, visit: https://github.com/ryojitanabe/reproblems.\n",
     " */"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "#include <mlpack/xeus-cling.hpp>\n",
     "\n",
     "#include <ensmallen.hpp>"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "// Header files to create and show the plot.\n",
     "#define WITHOUT_NUMPY 1\n",
@@ -39,47 +41,46 @@
     "#include \"xwidgets/ximage.hpp\"\n",
     "\n",
     "namespace plt = matplotlibcpp;"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "using namespace ens;"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "using namespace ens::test;"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "### 1. Background\n",
     "\n",
-    "It was the June of 1962, the company Rocketdyne was tasked with heavy responsibility of sending man to the moon as per Kennedy's bold promise. NASA along with Rocketdyne, developed an F-1 engine capable of burning an fuel of olympic size swimming pool. On the D-day when the engines ignited and the rocket was ready to take off, the engines exploded and the failure was catastrophic.\n",
+    "It was the June of 1962, the company Rocketdyne was tasked with the heavy responsibility of sending a man to the moon as per Kennedy's bold promise. NASA, along with Rocketdyne, developed an F-1 engine capable of burning fuel of Olympic size swimming pool. On the D-day, when the engines ignited and the rocket was ready to take off, the engines exploded and the failure was catastrophic.\n",
     "\n",
     "**So, what went wrong?**\n",
     "\n",
     "Let's discuss the basics first.\n",
     "\n",
-    "A rocket system consists of two liquid propellants, namely the fuel ($H_2$) and oxidiser ($O_2$). These propellants are stored in separate tanks, and pumped into the combustion chamber. The chamber houses the exothermic reaction between the propellants to release energy vital for the take-off process. For the reaction to occur readily, an injector mechanism is installed which disperses these liquid propellants into tiny droplets and allow the mixing of the chemicals.\n",
+    "A rocket system consists of two liquid propellants, namely the fuel ($H_2$) and oxidiser ($O_2$). These propellants are stored in separate tanks, and pumped into the combustion chamber. The chamber houses the exothermic reaction between the propellants to release energy vital for the take-off process. For the reaction to occur readily, an injector mechanism is installed, which disperses these liquid propellants into tiny droplets and allow the mixing of the chemicals.\n",
     "\n",
     "![](media/combustion.gif)"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     " **The Achilles heel**\n",
     " \n",
@@ -88,11 +89,11 @@
     "Why so? The devil's in the details. The combustion process creates extreme temperature and pressure conditions inside the thrust chamber. Under such circumstances, the chamber is a very sensible high-pressure cooking pot. Thus, if the influx is off ever so slightly the flames would sway controllably burning down the entire system. \n",
     "\n",
     " ![](media/unstable.gif)"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "### 2. Framing the problem.\n",
     "\n",
@@ -110,43 +111,44 @@
     "c) **Oxygen Area** ($O.A$): The area of the tube from which $O_2$ flows in.\n",
     "\n",
     "d) **Oxygen Post-Tip-Thickness** ($O.P.T.T$): The thickness of the annulus between the two propellants."
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "![](media/design.jpg)"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "#### II. Objective Functions\n",
     "\n",
     "All the objectives below should be **minimized**. Further, each of the following output have been normalized to [0, 1] range.\n",
     "\n",
-    "a) **Maximum temperature at injector face** ($TF_{max}$): Pevent meltdown of the injector surface. Determines the thermal stability of the combustion chamber. \n",
+    "a) **Maximum temperature at injector face** ($TF_{max}$): Prevent meltdown of the injector surface. Determines the thermal stability of the combustion chamber. \n",
     "\n",
     "b) **Distance From inlet** ($X_{CC}$): The distance from the injector surface where 90% of the combustion is complete. Lesser   values signifies quality mixing and high performance.\n",
     "\n",
     "c) **Maximum temperature at post tip** ($TT_{max}$): The temperature at the annulus of the propellants tubes. Similar to $TF_{max}$, this objective is to be minimized to prevent thermal breakdown."
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "![](media/objectives.jpg)   \n",
     "\n",
     "                                                "
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "class InjectorDesignProblem\n",
     "{\n",
@@ -243,13 +245,13 @@
     "\n",
     "InjectorDesignProblem idp;\n",
     "auto objectives = idp.GetObjectives();"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "const double lowerBound = 0;\n",
     "const double upperBound = 1;\n",
@@ -268,42 +270,92 @@
     "                 );\n",
     "\n",
     "arma::mat coords = idp.GetInitialPoint();"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "moead.Optimize(objectives, coords);"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "Store the optimal set of solutions in a ```arma::cube``` data structure. Each slice of the cube is a ```3 x 1``` matrix \n",
-    "representing a single set of optimal solution."
-   ],
-   "metadata": {}
+    "Now that the optimization procedure is completed. Let's inspect some of the optimal design variables for injector design. Remember, the algorithm produces a multiple set optimal design variables aka ```ParetoSet``` and its corresponding objective values ```ParetoFront```."
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [
-    "const arma::cube& paretoFront = moead.ParetoFront();"
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Displaying one of the optimal design variables.\n",
+      "\n",
+      "Hydrogen flow angle: 0.0975331\n",
+      "Hydrogen area: 0.998602\n",
+      "Oxygen area: 0.587004\n",
+      "Oxygen post-tip-thickness: 0.00576975\n",
+      "\n",
+      "========================================\n",
+      "\n",
+      "Displaying the corresponding objective values.\n",
+      "\n",
+      "Maximum temperature at injector face: 0.0931923\n",
+      "Distance From inlet: 0.795782\n",
+      "Maximum temperature at post tip: 0.370252\n"
+     ]
+    }
    ],
-   "outputs": [],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "source": [
+    "// Store the optimal design variables. Each slice of the cube represents a 4 x 1 matrix.\n",
+    "const arma::cube& paretoSet = moead.ParetoSet();\n",
+    "// Store the corresponding objective values. Each slice of the cube represents a 3 x 1 matrix.\n",
+    "const arma::cube& paretoFront = moead.ParetoFront();\n",
     "size_t populationSize = paretoFront.n_slices;\n",
     "\n",
+    "\n",
+    "// Index a random set of variables.\n",
+    "double randomIdx = arma::randi(arma::distr_param(0, populationSize - 1));\n",
+    "// Design variables.\n",
+    "double alpha = paretoSet.slice(randomIdx)(0);\n",
+    "double HA = paretoSet.slice(randomIdx)(1);\n",
+    "double OA = paretoSet.slice(randomIdx)(2);\n",
+    "double OPTT = paretoSet.slice(randomIdx)(3);\n",
+    "// Objective values.\n",
+    "double TF = paretoFront.slice(randomIdx)(0);\n",
+    "double X_CC = paretoFront.slice(randomIdx)(1);\n",
+    "double TT = paretoFront.slice(randomIdx)(2);\n",
+    "\n",
+    "\n",
+    "\n",
+    "std::cout << \"Displaying one of the optimal design variables.\\n\" << std::endl;\n",
+    "std::cout << \"Hydrogen flow angle: \" << alpha << std::endl;\n",
+    "std::cout << \"Hydrogen area: \" << HA << std::endl;\n",
+    "std::cout << \"Oxygen area: \" << OA << std::endl;\n",
+    "std::cout << \"Oxygen post-tip-thickness: \" << OPTT << std::endl;\n",
+    "std::cout << \"\\n\";\n",
+    "std::cout << \"========================================\\n\" << std::endl;\n",
+    "\n",
+    "std::cout << \"Displaying the corresponding objective values.\\n\" << std::endl;\n",
+    "std::cout << \"Maximum temperature at injector face: \" << TF << std::endl;\n",
+    "std::cout << \"Distance From inlet: \" << X_CC << std::endl;\n",
+    "std::cout << \"Maximum temperature at post tip: \" << TT << std::endl;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "std::vector<double> X (populationSize, 0.), \n",
     "                    Y (populationSize, 0.), \n",
     "                    Z (populationSize, 0.);\n",
@@ -314,13 +366,29 @@
     "    Y[idx] = paretoFront.slice(idx)(1);\n",
     "    Z[idx] = paretoFront.slice(idx)(2);\n",
     "}"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "fdba1c67a4ad472a924a199827769beb",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "A Jupyter widget with unique id: fdba1c67a4ad472a924a199827769beb"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "plt::figure_size(1000, 800);\n",
     "plt::suptitle(\"Scatter Matrix of Pareto Fronts\");\n",
@@ -342,12 +410,11 @@
     "plt::save(\"./scatter.png\");\n",
     "auto im = xw::image_from_file(\"scatter.png\").finalize();\n",
     "im"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "### References\n",
     "\n",
@@ -356,8 +423,7 @@
     "3. \"Rocket Fuel Injectors - Things Kerbal Space Program Doesn't Teach\", Youtube, uploaded by Scott Manley, 10th March 2020, https://www.youtube.com/watch?v=aa4ATJGRqA0.\n",
     "4. Tanabe, Ryoji, and Hisao Ishibuchi. \"An easy-to-use real-world multi-objective optimization problem suite.\" Applied Soft Computing 89 (2020): 106078.\n",
     "5. Vaidyanathan, Rajkumar, et al. \"Cfd-based design optimization for single element rocket injector.\" 41st Aerospace Sciences Meeting and Exhibit. 2003."
-   ],
-   "metadata": {}
+   ]
   }
  ],
  "metadata": {
