Include xeus-cling header.

--- a/reinforcement_learning_gym/lunar_lander_dqn/lunar_lander_dqn.ipynb
+++ b/reinforcement_learning_gym/lunar_lander_dqn/lunar_lander_dqn.ipynb
@@ -28,7 +28,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#include <mlpack/core.hpp>"
+    "#include <mlpack/xeus-cling.hpp>"
    ]
   },
   {
@@ -37,6 +37,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#include <mlpack/core.hpp>\n",
     "#include <mlpack/methods/ann/ffn.hpp>\n",
     "#include <mlpack/methods/reinforcement_learning/q_learning.hpp>\n",
     "#include <mlpack/methods/reinforcement_learning/q_networks/simple_dqn.hpp>\n",
