Describe how the objective function was obtained.

--- a/rocket_injector_design/rocket-injector-design-cpp.ipynb
+++ b/rocket_injector_design/rocket-injector-design-cpp.ipynb
@@ -99,6 +99,7 @@
     "\n",
     "With the motivation established, let's begin by framing the problem. As discussed, the cornerstone of an ideal rocket system is its injector design. One can infer that the performance and quality of life of the system stand in stark contrast. Both of these are primarily controlled by injector design. This is where multi-objective optimizers kick in. In this notebook, we will try and find the optimal set of design variables to generate a set of [Pareto Optimal](https://www.investopedia.com/terms/p/pareto-efficiency.asp) solutions.\n",
     "\n",
+    "To study the effect of the design variables on the said objectives, Computation Fluid Dynamics (CFD) based computations were carried out to retreive an approximate the relation between them via a polynomial equation.\n",
     "\n",
     "#### I. Design Variables \n",
     "\n",
