completed markdown for all 4 parts in c++ notebook

--- a/rainfall_prediction_with_random_forest/rainfall-prediction-with-random-forest-cpp.ipynb
+++ b/rainfall_prediction_with_random_forest/rainfall-prediction-with-random-forest-cpp.ipynb
@@ -981,6 +981,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "// Load the oversampled encoded & trimmed data into armadillo matrix.\n",
     "arma::mat overSampled = LoadData(\"./data/weatherAUS_trim.csv\")"
    ]
   },
@@ -991,6 +992,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "// Save the encoded armadillo matrix for visualization.\n",
     "data::Save(\"./data/weatherAUSEnc.csv\", overSampled);"
    ]
   },
@@ -1222,12 +1224,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "1fb71395-13a8-4f9a-a0f6-5a0674af1396",
+   "metadata": {},
+   "source": [
+    "Unlike our `Resample` method, we need to handle missing and categorical data before applying `SMOTE` "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 57,
    "id": "add99eba-c390-46c7-88f5-8d8e86511b4c",
    "metadata": {},
    "outputs": [],
    "source": [
+    "// Perform imputation on the original dataset using \"mean\" imputation policy.\n",
     "Impute(\"weatherAUS.csv\");"
    ]
   },
@@ -1278,6 +1289,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "// Load encoded & trimmed data into armadillo matrix.\n",
     "arma::mat smote = LoadData(\"./data/weatherAUS_trim.csv\")"
    ]
   },
@@ -1288,6 +1300,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "// Save the encoded armadillo matrix for applying SMOTE.\n",
     "mlpack::data::Save(\"./data/smote_in.csv\", smote);"
    ]
   },
@@ -1298,6 +1311,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "// Oversample the minority class using SMOTE resampling strategy.\n",
     "Resample(\"./data/smote_in.csv\", \"RainTomorrow\", \"No\", \"Yes\", \"smote\", \"Date\", 123);"
    ]
   },
@@ -1318,6 +1332,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "// Load SMOTE resampled, encoded data into armadillo matrix.\n",
     "arma::mat smoteEnc = LoadData(\"./data/smote_in_smotesampled_woh.csv\")"
    ]
   },
@@ -1328,6 +1343,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "// Save the encoded armadillo matrix for visualization.\n",
     "data::Save(\"./data/weatherAUSEnc.csv\", smoteEnc);"
    ]
   },
@@ -1364,6 +1380,7 @@
     }
    ],
    "source": [
+    "// Visualize the distribution of target classes.\n",
     "CountPlot(\"./data/weatherAUSEnc.csv\", \"RainTomorrow\", \"\", \"Part-3 Distribution of target class\");\n",
     "auto img = xw::image_from_file(\"./plots/Part-3 Distribution of target class.png\").finalize();\n",
     "img"
@@ -1435,28 +1452,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "// Split the dataset into train and set sets using mlpack Split API.\n",
     "arma::mat Xtrain, Xtest;\n",
-    "arma::Row<size_t> Ytrain, Ytest;"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 75,
-   "id": "51ee3e91-1a9f-4d9c-834a-f0d1fb864808",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "arma::Row<size_t> Ytrain, Ytest;\n",
     "mlpack::data::Split(smoteEnc, targets, Xtrain, Xtest, Ytrain, Ytest, 0.25);"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 76,
-   "id": "258dda85-6f77-4749-8cb1-37960c3a6420",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "arma::mat XtrainScaled, XtestScaled;"
    ]
   },
   {
@@ -1466,10 +1465,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "// Standardize the train & test features.\n",
+    "arma::mat XtrainScaled, XtestScaled;\n",
     "StandardScaler scale;\n",
     "scale.Fit(Xtrain);\n",
     "scale.Transform(Xtrain, XtrainScaled);\n",
     "scale.Transform(Xtest, XtestScaled);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0b0cfb08-1a4a-46f5-a4e2-1b49e45457a6",
+   "metadata": {},
+   "source": [
+    "### Training the Random Forest model\n",
+    "We will use `RandomForest()` API from mlpack to train the model with 100 trees on the oversampled data."
    ]
   },
   {
@@ -1479,7 +1489,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "// Create and train Random Forest model with 100 trees.\n",
     "RandomForest<> rf(XtrainScaled, Ytrain, 2, 100);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "70608e15-7321-4e05-a15b-e362d317cbdb",
+   "metadata": {},
+   "source": [
+    "### Making Predictions on Test set"
    ]
   },
   {
@@ -1489,6 +1508,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "// Predict the values for test data using previously trained model as input.\n",
     "arma::Row<size_t> output;\n",
     "arma::mat probs;\n",
     "rf.Classify(XtestScaled, output, probs);"
@@ -1501,8 +1521,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "// Save predicted probabilities and ground truth as csv for generating ROC AUC curve.\n",
     "data::Save(\"./data/probabilities.csv\", probs);\n",
     "data::Save(\"./data/ytest.csv\", Ytest);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "32d993bb-877d-4a40-9216-0af315784623",
+   "metadata": {},
+   "source": [
+    "### Model Evaluation"
    ]
   },
   {
@@ -1524,6 +1553,7 @@
     }
    ],
    "source": [
+    "// Classification report.\n",
     "std::cout << \"Accuracy: \" << Accuracy(output, Ytest) << std::endl;\n",
     "ClassificationReport(output, Ytest);"
    ]
@@ -1562,7 +1592,8 @@
    "id": "bdba8f8b-291f-41ad-b8e0-85c192b52623",
    "metadata": {},
    "source": [
-    "### Part - 4 Modelling using Random undersampling"
+    "### Part - 4 Modelling using Random undersampling\n",
+    "For this part we would be handling the class imbalance by undersampling the majority class, to see how well our model trains and performs on randomly undersampled data."
    ]
   },
   {
@@ -1572,6 +1603,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "// Undersample the minority population.\n",
     "Resample(\"weatherAUS.csv\", \"RainTomorrow\", \"No\", \"Yes\", \"undersample\", \"Date\", 123);"
    ]
   },
@@ -1627,6 +1659,7 @@
     }
    ],
    "source": [
+    "// Generate a heatmap for missing values.\n",
     "MissingPlot(\"./data/weatherAUS_undersampled.csv\", \"PuBu\", \"Part-4 Missing values pre-imputation\");\n",
     "auto img = xw::image_from_file(\"./plots/Part-4 Missing values pre-imputation.png\").finalize();\n",
     "img"
@@ -1690,6 +1723,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "// Load undersampled encoded & trimmed data into armadillo matrix.\n",
     "arma::mat underSampled = LoadData(\"./data/weatherAUS_trim.csv\")"
    ]
   },
@@ -1700,6 +1734,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "// Save the armadillo matrix for visualization.\n",
     "data::Save(\"./data/weatherAUSEnc.csv\", underSampled);"
    ]
   },
@@ -1771,28 +1806,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "// Split the dataset into train and set sets using mlpack Split API.\n",
     "arma::mat Xtrain, Xtest;\n",
-    "arma::Row<size_t> Ytrain, Ytest;"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 97,
-   "id": "158d162e-82e7-40aa-9597-a7f87bb7c250",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "arma::Row<size_t> Ytrain, Ytest;\n",
     "mlpack::data::Split(underSampled, targets, Xtrain, Xtest, Ytrain, Ytest, 0.25);"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 98,
-   "id": "9e5ab98d-2816-48fc-8eec-686b0079f7e0",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "arma::mat XtrainScaled, XtestScaled;"
    ]
   },
   {
@@ -1802,10 +1819,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "// Standardize the train & test features.\n",
+    "arma::mat XtrainScaled, XtestScaled;\n",
     "StandardScaler scale;\n",
     "scale.Fit(Xtrain);\n",
     "scale.Transform(Xtrain, XtrainScaled);\n",
     "scale.Transform(Xtest, XtestScaled);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7c0e1d1d-847f-452c-bfdb-1b2a24b215f5",
+   "metadata": {},
+   "source": [
+    "### Training the Random Forest model\n",
+    "We will use `RandomForest()` API from mlpack to train the model with 100 trees on the oversampled data."
    ]
   },
   {
@@ -1815,7 +1843,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "// Create and train Random Forest model with 100 trees.\n",
     "RandomForest<> rf(XtrainScaled, Ytrain, 2, 100);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8fb51e57-8764-4def-aec7-9503ac822d3c",
+   "metadata": {},
+   "source": [
+    "### Making Predictions on Test set"
    ]
   },
   {
@@ -1825,6 +1862,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "// Predict the values for test data using previously trained model as input.\n",
     "arma::Row<size_t> output;\n",
     "arma::mat probs;\n",
     "rf.Classify(XtestScaled, output, probs);"
@@ -1837,8 +1875,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "// Save predicted probabilities and ground truth as csv for generating ROC AUC curve.\n",
     "data::Save(\"./data/probabilities.csv\", probs);\n",
     "data::Save(\"./data/ytest.csv\", Ytest);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "96f23bd6-e5b0-4040-a1ab-2dfbd781b549",
+   "metadata": {},
+   "source": [
+    "### Model Evaluation"
    ]
   },
   {
@@ -1860,6 +1907,7 @@
     }
    ],
    "source": [
+    "// Classification report.\n",
     "std::cout << \"Accuracy: \" << Accuracy(output, Ytest) << std::endl;\n",
     "ClassificationReport(output, Ytest);"
    ]
