added dataset source in notebooks

--- a/rainfall_prediction_with_random_forest/rainfall-prediction-with-random-forest-cpp.ipynb
+++ b/rainfall_prediction_with_random_forest/rainfall-prediction-with-random-forest-cpp.ipynb
@@ -51,6 +51,16 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "6080d203-b49d-4a41-b9de-74ef107998cf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!wget -q http://datasets.mlpack.org/weatherAUS.csv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
    "id": "645d4fd2-a8d4-4d6b-b0db-a49d12514c7d",
    "metadata": {},
    "outputs": [],
