--- a/rainfall_prediction_with_random_forest/rainfall-prediction-with-random-forest-py.ipynb
+++ b/rainfall_prediction_with_random_forest/rainfall-prediction-with-random-forest-py.ipynb
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 2,
    "id": "ca779e49-3b79-4133-ac15-c4f549702d2c",
    "metadata": {},
    "outputs": [],
@@ -91,7 +91,7 @@
    "outputs": [],
    "source": [
     "# Load Rain in Australia (weatherAUS) dataset.\n",
-    "weatherData = pd.read_csv(\"weatherAUS.csv\", parse_dates=[\"Date\"])"
+    "weatherData = pd.read_csv(\"http://datasets.mlpack.org/weatherAUS.csv\", parse_dates=[\"Date\"])"
    ]
   },
   {
