added markdown & fixed styling issues in py notebook

--- a/loan_default_prediction_with_decision_tree/loan-default-prediction-with-decision-tree-py.ipynb
+++ b/loan_default_prediction_with_decision_tree/loan-default-prediction-with-decision-tree-py.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 2,
    "id": "dcfc835b-f39b-4f97-899d-e2f1201654e8",
    "metadata": {},
    "outputs": [],
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "d9748bb5-b71b-4c00-8eec-3f3d64a227c2",
    "metadata": {},
    "outputs": [],
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "2fd29ba5-6472-4ab7-8c49-76e4b5d296aa",
    "metadata": {},
    "outputs": [],
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "aabfa3ae-18b1-4888-a38a-ac2a8540d65a",
    "metadata": {},
    "outputs": [
@@ -164,7 +164,7 @@
        "4         1       9427.92      461562.00           0"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "0e912a79-fee7-4203-b339-c7230b5990ca",
    "metadata": {},
    "outputs": [
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "e0247992-edbd-403d-bbf8-7c11ab1ff7e5",
    "metadata": {},
    "outputs": [
@@ -254,7 +254,7 @@
     }
    ],
    "source": [
-    "## Check the percentage of missing values\n",
+    "## Check the percentage of missing values.\n",
     "(loanData.isnull().sum() / len(loanData)) * 100"
    ]
   },
@@ -302,7 +302,7 @@
    "id": "05ea8ce2-ecf1-4a15-bbee-103d87249c07",
    "metadata": {},
    "source": [
-    "From the above visualization, we can observe that the presence of \"No\" and \"Yes\", so there is a huge class imbalance. For the first part we would not be handling the class imbalance. In order to see how our model performs on the raw imbalanced data"
+    "From the above visualization, we can observe that the presence of \"0\" and \"1\", so there is a huge class imbalance. For the first part we would not be handling the class imbalance. In order to see how our model performs on the raw imbalanced data"
    ]
   },
   {
@@ -338,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "id": "2544dde6-ea3f-47e1-80f6-cf0fdb40e3ae",
    "metadata": {},
    "outputs": [],
@@ -385,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 17,
    "id": "29c77373-3adc-436a-95e4-bd35592b0090",
    "metadata": {},
    "outputs": [],
@@ -428,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 16,
    "id": "98c6bb0b-cde0-43dc-9b75-56ab29d240a9",
    "metadata": {},
    "outputs": [],
@@ -512,7 +512,8 @@
    "id": "53f2ce81-1842-412c-a0a7-0c0368874b44",
    "metadata": {},
    "source": [
-    "### Training Decision Tree model"
+    "### Training Decision Tree model\n",
+    "Decision trees start with a basic question, From there you can ask a series of questions to determine an answer. These questions make up the decision nodes in the tree, acting as a means to split the data. Each question helps an individual to arrive at a final decision, which would be denoted by the leaf node. Observations that fit the criteria will follow the “Yes” branch and those that don’t will follow the alternate path.  Decision trees seek to find the best split to subset the data. To create the model we'll be using `decision_tree()` API from mlpack."
    ]
   },
   {
@@ -522,7 +523,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create and train Random Forest model with 100 trees.\n",
+    "# Create and train Decision Tree model.\n",
     "output = mlpack.decision_tree(training=Xtrain, labels=ytrain, print_training_accuracy=True)"
    ]
   },
@@ -657,8 +658,7 @@
    "id": "fbf2de9e-e1e9-4329-90b8-c0a57e14c9dc",
    "metadata": {},
    "source": [
-    "From the above classification report, we can infer that our model trained on imbalanced data performs well on negative class but not the same for positive class.\n",
-    "Also from the ROC AUC Curve, we can infer the same."
+    "From the above classification report, we can infer that our model trained on imbalanced data performs well on negative class but not the same for positive class."
    ]
   },
   {
@@ -667,12 +667,12 @@
    "metadata": {},
    "source": [
     "### Part 2 - Modelling using Random Oversampling\n",
-    "For this part we would be handling the class imbalance. In order to see how our model performs on the randomly oversampled data. We will be using `Resample()` method to oversample the minority class i.e \"Yes, signifying it will rain tomorrow\""
+    "For this part we would be handling the class imbalance. In order to see how our model performs on the randomly oversampled data. We will be using `Resample()` method to oversample the minority class i.e \"1, signifying Defaulted\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 9,
    "id": "296b6ec5-296a-4ac9-a9e2-18656a543d82",
    "metadata": {},
    "outputs": [],
@@ -701,7 +701,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# oversample the minority class.\n",
+    "# Oversample the minority class.\n",
     "negClass = loanData[loanData[\"Defaulted?\"] == 0]\n",
     "posClass = loanData[loanData[\"Defaulted?\"] == 1]\n",
     "posOverSampled = Resample(posClass, replace=True, n_samples=len(negClass))\n",
@@ -791,13 +791,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "6b0dcc92-5647-4d2d-95f0-bcf3f50673e1",
+   "metadata": {},
+   "source": [
+    "### Training Decision Tree model\n",
+    "We will use `decision_tree()` API from mlpack to train the model on oversampled data."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 53,
    "id": "3ebd50d6-174c-46ca-bf02-a8cc4216e890",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create and train Random Forest model with 100 trees.\n",
+    "# Create and train Decision Tree model.\n",
     "output = mlpack.decision_tree(training=Xtrain, labels=ytrain, print_training_accuracy=True)"
    ]
   },
@@ -809,6 +818,14 @@
    "outputs": [],
    "source": [
     "rf = output[\"output_model\"]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8174f623-d2f6-43e4-9e40-b62ef37b0910",
+   "metadata": {},
+   "source": [
+    "### Making Predictions on Test set"
    ]
   },
   {
@@ -830,6 +847,14 @@
    "outputs": [],
    "source": [
     "yPreds = predictions[\"predictions\"].reshape(-1, 1).squeeze()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "33c3b6a9-5f5d-4796-9868-913deaa9dce6",
+   "metadata": {},
+   "source": [
+    "### Model Evaluation"
    ]
   },
   {
@@ -885,7 +910,7 @@
    "metadata": {},
    "source": [
     "### Part 3 - Modelling using Synthetic Minority Oversampling Technique\n",
-    "For this part we would be handling the class imbalance. In order to see how our model performs on the oversampled data using SMOTE. We will be using `SMOTE` API from imblearn to oversample the minority class i.e \"Yes, signifying it will rain tomorrow\""
+    "For this part we would be handling the class imbalance. In order to see how our model performs on the oversampled data using SMOTE. We will be using `SMOTE` API from imblearn to oversample the minority class i.e \"1, signifying Defaulted\""
    ]
   },
   {
@@ -931,6 +956,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f7df7b76-e0b9-4678-8ade-8e76e1961fc1",
+   "metadata": {},
+   "source": [
+    "### Train Test Split\n",
+    "The dataset has to be split into training and test set. The test ratio is taken as 20% of the total observations."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 66,
    "id": "feeef0d1-d32b-41b1-9b48-7270da821952",
@@ -941,13 +975,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d4bf1d7a-d985-42d5-ae7f-bcc37080f398",
+   "metadata": {},
+   "source": [
+    "### Training Decision Tree model\n",
+    "We will use `decision_tree()` API from mlpack to train the model on SMOTE data."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 67,
    "id": "ab6c2d7f-3232-4246-a803-c8c800a3e72d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create and train Random Forest model with 100 trees.\n",
+    "# Create and train Decision Tree model.\n",
     "output = mlpack.decision_tree(training=Xtrain, labels=ytrain, print_training_accuracy=True)"
    ]
   },
@@ -980,6 +1023,14 @@
    "outputs": [],
    "source": [
     "yPreds = predictions[\"predictions\"].reshape(-1, 1).squeeze()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7b169726-63ff-44eb-980a-92a817925a4e",
+   "metadata": {},
+   "source": [
+    "### Model Evaluation"
    ]
   },
   {
@@ -1023,6 +1074,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "f7e58df1-399b-40ac-b5ca-1169c2e19a41",
+   "metadata": {},
+   "source": [
+    "From the above classification report, we can infer that our model trained on SMOTE data performs well on both the classes, There is some difference when compared to randomly oversampled data due to variation in the samples generated by SMOTE. Also from the ROC AUC Curve, we can infer the True Positive Rate is around 80%, which is a quantifies that our model performs well on unseen data."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "8beecbb4-9dcd-4a2b-9f77-a1efafa51ff9",
    "metadata": {},
    "source": [
@@ -1040,12 +1099,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 10,
    "id": "1c7b0281-a3fe-4532-97ad-3848dafc9965",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# undersample the majority class.\n",
+    "# Undersample the majority class.\n",
     "negClass = loanData[loanData[\"Defaulted?\"] == 0]\n",
     "posClass = loanData[loanData[\"Defaulted?\"] == 1]\n",
     "negUnderSampled = Resample(negClass, replace=True, n_samples=len(posClass))\n",
@@ -1054,7 +1113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 11,
    "id": "6b60204a-1223-481c-96e2-e3a9f5776abf",
    "metadata": {},
    "outputs": [
@@ -1085,7 +1144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 14,
    "id": "ffe3487a-e430-4c05-a537-a66e8e675e3c",
    "metadata": {},
    "outputs": [
@@ -1107,12 +1166,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 18,
    "id": "17dbd144-dee4-4b4b-9edc-5cdc71a072c5",
    "metadata": {},
    "outputs": [],
    "source": [
     "features, target = FeatureTargetSplit(underSampled)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4f37d27c-b0cf-4531-b8f5-b3784f1b2acc",
+   "metadata": {},
+   "source": [
+    "### Train Test Split\n",
+    "The dataset has to be split into training and test set. Here the dataset has 666 observations and the test ratio is taken as 20% of the total observations. This indicates that the test set should have 20% * 666 = 133 observations and training set should have 533 observations respectively."
    ]
   },
   {
@@ -1123,6 +1191,15 @@
    "outputs": [],
    "source": [
     "Xtrain, Xtest, ytrain, ytest = TrainTestSplit(features, target, standardize=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9482fb8e-fb40-468b-b712-037c9925cd41",
+   "metadata": {},
+   "source": [
+    "### Training Decision Tree model\n",
+    "We will use `decision_tree()` API from mlpack to train the model on random undersampled data."
    ]
   },
   {
@@ -1147,6 +1224,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e8a95c28-5a44-44ac-ab17-f32dbc75d776",
+   "metadata": {},
+   "source": [
+    "### Making Predictions on Test set"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 80,
    "id": "0a06ea68-1c89-4d6c-87e5-fdaae1df8f1f",
@@ -1165,6 +1250,14 @@
    "outputs": [],
    "source": [
     "yPreds = predictions[\"predictions\"].reshape(-1, 1).squeeze()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7214477a-03a2-4bef-92e6-8e0855808e98",
+   "metadata": {},
+   "source": [
+    "### Model Evaluation"
    ]
   },
   {
@@ -1211,7 +1304,7 @@
    "id": "0e5b58a3-b4d6-4c2f-888b-9c8b40e1a579",
    "metadata": {},
    "source": [
-    "From the above classification report, we can infer that our model trained on undersampled data performs well on both the classes compared to imbalanced model in Part 1. Also from the ROC AUC Curve, we can infer the True Positive Rate is around 80% although there is a samll flatline, but still performs better than imbalanced model."
+    "From the above classification report, we can infer that our model trained on undersampled data performs well on both the classes compared to imbalanced model in Part 1. Also from the ROC AUC Curve, we can infer the True Positive Rate is around 80% although there is a small flatline, but still performs better than imbalanced model."
    ]
   },
   {
